--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-compass": "~0.7.0",
     "grunt-regarde": "~0.1.1",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-livereload": "~0.1.2"
+    "grunt-contrib-livereload": "~0.1.2",
+    "grunt-contrib-haml": "~0.1.1"
   }
 }
