--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-regarde": "~0.1.1",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-livereload": "~0.1.2",
-    "grunt-contrib-haml": "~0.1.1"
+    "grunt-contrib-haml": "~0.1.1",
+    "grunt-slim": "~0.1.0"
   }
 }
