--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-livereload": "~0.1.2",
     "grunt-contrib-haml": "~0.1.1",
-    "grunt-slim": "~0.1.0"
+    "grunt-slim": "~0.1.0",
+    "grunt-open": "~0.2.2"
   }
 }
